basic-nginx-demo/configuration/etc/microshift/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-nginx-service
spec:
  type: NodePort
  selector:
    app: edge-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30303
