basic-nginx-demo/configuration/etc/microshift/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: basic-nginx-service
spec:
  host: basic-nginx.local
  port:
    targetPort: 30303
  to:
    kind: Service
    name: basic-nginx-service
    weight: 100
  wildcardPolicy: None
